examples/Failing/Variables/fail_increment5.c
int main () {
    int a = 100;
    a++;
    return (a++)++;
}
